--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/xmas/snow.js"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
     <style>
       * {
-        font-family: 'Protest Riot', cursive;
+        font-family: 'Dancing Script', cursive;
       }
 
       body {
