--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/xmas/snow.js"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Riot&display=swap" rel="stylesheet">
 
     <style>
       * {
-        font-family: 'Dancing Script', cursive;
+        font-family: 'Protest Riot', cursive;
       }
 
       body {
@@ -161,10 +161,10 @@
       <div class="messagebox">
         <p class="from">10/2/2024 ♥</p>
         Happy new year 2024 <br />
-        NGUYỄN HOÀNG TRANG LINH 🍭<br />
-        Chúc bé năm mới có thật nhìu sức khỏe , nhìu tiền :)) <br />
-        Sẽ có thật nhiều niềm vui mới , nhiều trải nghiệm mới <br />
+        NGUYỄN HOÀNG TRANG LINH 🍭<br />  <br />
+        Chúc cô bé thích ngọt năm mới sẽ có thật là nhiều nìm zui , sức khỏe , vật chất , tinh thần ạ <br /><br />
         Sẽ cùng hoạt động với anh trong ban Văn Hóa của Melody <br /> <br />
+        Quan trọng hơn là : Dù thế giới có nhiều bất công, không công bằng thì anh sẽ luôn đứng về phía em.  <br /> <br />
         fa63cbaba302190587b2dd4de1b90933♥<br /></br>
         <p class="from">From Đức Minh 
         
